--- a/.gitignore
+++ b/.gitignore
@@ -143,12 +143,14 @@ dmypy.json
 *.h5
 *.tar
 *.tar.gz
+temp
 
 # Lightning-Hydra-Template
 configs/local/default.yaml
 /data/
 /logs/
 .env
+./data/*
 
 # Aim logging
 .aim
