--- a/configs/train.yaml
+++ b/configs/train.yaml
@@ -4,12 +4,12 @@
 # order of defaults determines the order in which configs override each other
 defaults:
   - _self_
-  - data: mnist
-  - model: mnist
+  - data: custom
+  - model: custom
   - callbacks: default
-  - logger: null # set logger here or use command line (e.g. `python train.py logger=tensorboard`)
+  - logger: csv # set logger here or use command line (e.g. `python train.py logger=tensorboard`)
   - trainer: ddp
-  - paths: default
+  - paths: custom
   - extras: default
   - hydra: default
 
